# devflow

./: .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  DEPLOY_VERCEL.md  FILE_SIZE_REPORT.md  README.md  SIGNATURE_ADAPTER_DRY_RUN.md  VERSION.md  conftest.py  goal.md  pyproject.toml  requirements-dev.txt  requirements.txt  rules.md  run.bat  run.sh  scratch_tables.txt  v11_6_operator_final_package.md  v11_7_operator_release_package.md  v11_9_operator_final_release_package.md  v12_0_operator_deployment_package.md
.claude/: launch.json
api/: index.py
app/: advanced_readiness_service.py  archive_integrity_service.py  auth_audit_service.py  auth_mode.py  auth_service.py  bug_pattern_service.py  code_risk_service.py  config.py  crypto_signing_service.py  database.py  demo_profiles_data.py  demo_release_candidate_service.py  deps.py  end_to_end_rehearsal_service.py  env_guard_service.py  evidence_manifest_service.py  evidence_service.py  final_evidence_bundle_service.py  final_release_tag_service.py  first_run_wizard_service.py  git_import_service.py  guard_rules.py  guard_service.py  impact_service.py  main.py  migration_apply_assistant_service.py  migration_checker_service.py  migration_copy_apply_service.py  migration_sql_service.py  models.py  models_v103.py  models_v88.py  models_v89.py  models_v90.py  models_v91.py  models_v95.py  models_v97.py  models_v98.py  models_v99.py  openapi_deep_diff_service.py  (+135 more)
docs/: ARCHITECTURE_OVERVIEW.md  BROWSER_VISUAL_CHECKLIST.md  DEMO_SCRIPT.md  (+97 more)
(+342 files in other folders)
