[project]
name = "devflow-guard"
version = "12.0.0"
description = "Offline-first release governance demo (risk, evidence, digest locks, operator handoff)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear, C4 = comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # line length handled by formatter, not enforced hard
    "B008",  # FastAPI relies on function calls (Depends/Query/...) in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Standalone export/CLI scripts insert the repo root on sys.path before importing app.*
"scripts/*.py" = ["E402"]
# schemas.py is a façade that re-exports the schema modules for backwards compatibility.
"app/schemas.py" = ["F401", "F403", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
